# ScheduleRecoder

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  db.sqlite  hashtagcompleter.cpp  hashtagcompleter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pomodoro.cpp  pomodoro.h  poromodo.cpp  poromodo.h  resources.qrc
translations/: main_cn.ts  main_zh_CN.ts
